# diags_parser

./: .gitignore  README.md  pyproject.toml
diags_parser/: cli.py  diag_ast.py  formatting.py  lexer.py  logging_configs.py  my_types.py  parser.py  registry.py  tokens.py  tracing.py
tests/: original_fields.yaml  test_fields.yaml
