[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diags_parser"
version = "0.5"
dependencies = [
	"pytest>=8.3.4",
	"pytest-subtests>=0.14.1",
]

[tool.setuptools.packages.find]
include = ["diags_parser*"]

[project.scripts]
edp = "diags_parser.cli:main"
